Testing fix for body height bug on mobile devices.

--- a/main.scss
+++ b/main.scss
@@ -308,7 +308,7 @@ hr {
 }
 @media only screen and (min-width: 200px) and (max-width: 499px) {
     .body-bg {background: black;}
-    body {height: auto;}
+    body {max-height: 100vh;}
     html {font-family: $secondary-font; font-size: 0.6rem; line-height: 1em;}
     #homeTitle {font-size: 5rem; text-shadow: #b73785 3px 2px;}
     #contactEmail, #contactPhone, #gitLink, #about {text-shadow: black 1px 1px;}
